<resources>
    <string name="app_name">Okta Employee Art App</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="header">Please upload your art files</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="upload">Upload</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="welcome_to_okta_employee_art">Welcome to Okta Employee Art!</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="gallery">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_title">Please upload your art files</string>
    <string name="fav_title">Employee Favourites</string>
    <string name="company_title">Okta Employees Artwork</string>
    <string name="upload_by_on">Uploaded by %1$s on %2$s</string>
    <string name="select_photo">Select Photo</string>
    <string name="image_title">Image Title</string>
    <string name="title_required">Title Required</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
