<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignInFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.okta.art.FirstFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.okta.art.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignInFragment"
        android:name="com.okta.art.signin.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_SignInFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/GalleryFragment"
        android:name="com.okta.art.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery">

        <action
            android:id="@+id/action_GalleryFragment_to_UploadFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
